Added spawner and worker example plugins

--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -21,6 +21,8 @@
 add_plugin(to_console)
 add_plugin(random)
 add_plugin(running_avg)
+add_plugin(worker)
+add_plugin(spawner)
 
 
 # CONDITIONAL PLUGINS ##########################################################
