--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Install deps
       if: matrix.os == 'ubuntu-latest'
       run: >
-        sudo apt-get update
+        sudo apt-get update &&
         sudo apt-get install -y uuid-dev
 
     - name: Configure CMake
